# aui

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREDITS.md  LICENSE  MANUAL.md  README.md  Resource.rc  asan_suppressions.supp  aui.boot.cmake  aui.boot.py  conanfile.py  gdb.py  license.txt  lldb.py  mkdocs.yml  valgrind_suppressions.supp
AUI.Core/: CMakeLists.txt
AUI.Core/tests/: Async.cpp  BitField.cpp  Common.cpp  DependencyInjection.cpp  Enums.cpp  Files.cpp  Reflect.cpp  SharedPtrs.cpp  String.cpp  Threading.cpp  Uuid.cpp  i18n.cpp  test.cpp
AUI.Crypt/: CMakeLists.txt
AUI.Crypt/tests/: Crypt.cpp  Hash.cpp  Rsa.cpp
AUI.Curl/: CMakeLists.txt
AUI.Designer/: CMakeLists.txt
AUI.Designer/assets/: style.less
AUI.Designer/registrator/: CMakeLists.txt
AUI.Designer/src/: main.cpp
AUI.Image/: CMakeLists.txt
AUI.Installer/: CMakeLists.txt
AUI.Installer/src/: InstallerModel.h  Style.cpp  main.cpp
AUI.Mysql/: CMakeLists.txt
AUI.Svg/: CMakeLists.txt
AUI.Toolbox/: CMakeLists.txt
AUI.Toolbox/src/: Toolbox.h  main.cpp
AUI.Views/: CMakeLists.txt
aui.audio/: CMakeLists.txt
aui.audio/benchmarks/: PlayBenchmark.cpp
aui.core/: CMakeLists.txt
aui.core/benchmarks/: FutureBenchmark.cpp  SignalSlotBenchark.cpp  SmallPimplBenchmark.cpp  StringBenchmark.cpp
aui.core/cmake/: backtrace.cmake
aui.core/misc/: gen_reflection.py
aui.core/tests/: AlgorithmsTest.cpp  Async.cpp  Base64Test.cpp  BitFieldTest.cpp  ColorTest.cpp  CoroutinesTest.cpp  DependencyInjection.cpp  DependencyInjectionTest.cpp  DynamicVectorTest.cpp  EnumsTest.cpp  ExclusiveAccessLockableTest.cpp  FilesTest.cpp  FixedSizeCacheTest.cpp  FormatTest.cpp  Geometry2DTest.cpp  I18nTest.cpp  InvocationTargetExceptionTest.cpp  IteratorsTest.cpp  LazyTest.cpp  ModelsTest.cpp  NoEscapeTest.cpp  PimplTest.cpp  PipeTest.cpp  ProcessTest.cpp  PropertyCommonTest.cpp  PropertyDefTest.cpp  PropertyModifierTest.cpp  PropertyPrecomputed.cpp  PropertyTest.cpp  Reflect.cpp  ReflectTest.cpp  RuntimeBorrowCheckerTest.cpp  SchedulerTest.cpp  SharedPtrs.cpp  SharedPtrsTest.cpp  SignalSlot.cpp  SignalSlotTest.cpp  SmallPimplTest.cpp  SmallVectorTest.cpp  StackfulCoroutinesTest.cpp  (+14 more)
aui.crypt/: CMakeLists.txt
aui.crypt/tests/: Hash.cpp  Rsa.cpp
aui.curl/: CMakeLists.txt
aui.curl/tests/: CurlTest.cpp  WebsocketTest.cpp
aui.data/: CMakeLists.txt  README.md
aui.data/tests/: Builder.cpp  Meta.cpp  ORM.cpp  helper.cpp  helper.h
aui.image/: CMakeLists.txt
aui.image/tests/: ImageLoaderTest.cpp  ImageViewTest.cpp
aui.json/: CMakeLists.txt
aui.json/benchmarks/: JsonParseBenchmark.cpp
aui.json/tests/: Basic.cpp  ClassSerialization.cpp  CustomConverter.cpp  Error.cpp  JsonFieldsTest.cpp  PathTest.cpp  Performance.cpp  TypeChecks.cpp
aui.sqlite/: CMakeLists.txt
aui.sqlite/tests/: Builder.cpp  Meta.cpp  ORM.cpp
aui.svg/: CMakeLists.txt
aui.toolbox/: CMakeLists.txt
aui.toolbox/src/: Toolbox.h  main.cpp
aui.toolbox/tests/: ShadingLanguageTests.cpp
aui.uitests/: CMakeLists.txt
aui.uitests/benchmarks/: UIBenchmarkScene.h  UILayoutBenchmark.cpp  UIOpenGLBenchmark.cpp  UIStyleLegacyBenchmark.cpp
aui.uitests/tests/: ClickTest.cpp  TestWindow.cpp  TestWindow.h  TextFieldTest.cpp  TypeTest.cpp  UIAssSizingModel.cpp  UIClickTest.cpp  UIDataBindingTest.cpp  UIDeclarativeForTest.cpp  UIKeyDownRecursive.cpp  UILayoutTest.cpp  UIMultitouchTest.cpp  UIOpenGLRendererTest.cpp  UIPointerBehaviourTest.cpp  UIReactiveTest.cpp  UIRenderOptimizationTest.cpp  UIRepaintTest.cpp  UIScreenAnalyzerTest.cpp  UIScrollOverrunningTest.cpp  UIScrollPointerMoveTest.cpp  UIScrollTest.cpp  UIStyleTest.cpp  UITextAreaTest.cpp  UITextFieldTest.cpp  UITextTest.cpp  UITypeTest.cpp  UIViewFocusTest.cpp
aui.updater/: CMakeLists.txt
aui.updater/aui.updater.test/: CMakeLists.txt
aui.updater/tests/: AppropriatePredicateTest.cpp  UpdaterStatusTest.cpp  UpdaterTest.cpp  VersionTest.cpp
aui.video/: CMakeLists.txt
aui.views/: CMakeLists.txt
aui.views/shaders/: backdrop_blur.fsh.glsl  backdrop_liquid.fsh.glsl  basic.vert  basic.vsh  basic.vsh.glsl  basic_gradient.vert  basic_uv.vsh  basic_uv.vsh.glsl  border_rounded.fsh  border_rounded.fsh.glsl  dashed.glsl  dashed.sl  erf.glsl  gradient.frag  gradient.glsl  gradient.sl  gradient_textured.glsl  gradient_textured.sl  line_solid_dashed.fsh  line_solid_dashed.fsh.glsl  merge_masks.fsh.glsl  merge_masks.vsh.glsl  rect_gradient.fsh  rect_gradient.fsh.glsl  rect_gradient_rounded.fsh  rect_gradient_rounded.fsh.glsl  rect_solid.fsh  rect_solid.fsh.glsl  rect_solid_rounded.fsh  rect_solid_rounded.fsh.glsl  rect_textured.fsh  rect_textured.fsh.glsl  rect_textured_rounded.fsh.glsl  rect_unblend.fsh  rect_unblend.fsh.glsl  rounded.glsl  rounded.sl  shadow.fsh  shadow.fsh.glsl  shadow.vsh  (+14 more)
aui.views/shaders_legacy/: basic.vsh  basic_uv.vsh  border_rounded.fsh  line_solid_dashed.fsh  rect_gradient.fsh  rect_gradient_rounded.fsh  rect_solid_rounded.fsh  rect_textured.fsh  rounded.sl  symbol.vsh  symbol_sub.fsh
aui.views/tests/: AForEachUITest.cpp  AGroupBoxTest.cpp  AListViewTest.cpp  AScrollAreaTest.cpp  AScrollbarTest.cpp  ASplitterTest.cpp  AStackedLayoutTest.cpp  ATabViewTest.cpp  ATextBaseTest.cpp  ATreeViewTest.cpp  AViewMeasureTest.cpp  AViewTest.cpp  AssTest.cpp  DataBinding.cpp  HVLayoutTest.cpp  OptimalBlurParamsTest.cpp  WordWrappingEngineTest.cpp
examples/: CMakeLists.txt  README.md
examples/7guis/: CMakeLists.txt
examples/AUI.Example.Fractal/: CMakeLists.txt
examples/AUI.Example.Minesweeper/: CMakeLists.txt
examples/AUI.Example.Notes/: CMakeLists.txt
examples/AUI.Example.Views/: CMakeLists.txt
examples/AUI.Example.Words/: CMakeLists.txt
examples/app/: CMakeLists.txt
examples/ui/: CMakeLists.txt
test/: CMakeLists.txt
test/ProvideToolbox/: CMakeLists.txt
test/aui.boot/: .gitignore  CMakeLists.txt
test/minimal_deployment_test/: CMakeLists.txt
tests/: CMakeLists.txt  nonvalid.crt  root.crt  tests.vcxproj  tests.vcxproj.filters  valid.crt
tests/src/: tests.cpp
(+3021 files in other folders)
